--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -39,6 +39,7 @@ TRIGGERS=1
 FLUSH=0
 THRESHOLD=0
 VERBOSE=0
+VARIANT=REGULAR
 
 all: compile run
 all_sad: compile_sad run
@@ -47,8 +48,7 @@ all_edge: compile_edge run
 compile_sad:
 	iverilog \
 	../hdl/sad.v \
-	../hdl/sad_v2.v \
-	../hdl/sad_v3_baseline.v \
+	../hdl/sad_v6.v \
 	../hdl/sad_wrapper.v \
 	../hdl/usb_reg_main.v \
 	../fpga-common/hdl/cdc_pulse.v \
@@ -60,6 +60,7 @@ compile_sad:
 	-I../hdl \
 	-Wportbind \
 	-Wselect-range \
+	-D$(VARIANT) \
 	-P sad_tb.pLINEAR_RAMP=$(LINEAR_RAMP) \
 	-P sad_tb.pINPUTS_FROM_FILE=$(INPUTS_FROM_FILE) \
 	-P sad_tb.pREF_SAMPLES=$(REF_SAMPLES) \
@@ -83,6 +84,7 @@ sad_nofifo:
 	sad_tb.v \
 	-g2005-sv \
 	-DNOFIFO \
+	-D$(VARIANT) \
 	-I../hdl \
 	-Wportbind \
 	-Wselect-range \
@@ -105,6 +107,7 @@ compile_edge:
 	-I../hdl \
 	-Wportbind \
 	-Wselect-range \
+	-D$(VARIANT) \
 	-P edge_tb.pEDGES=$(EDGES) \
 	-P edge_tb.pDUMP=$(DUMP) \
 	-P edge_tb.pSEED=$(SEED) \
@@ -122,6 +125,7 @@ compile:
 	-Wselect-range \
 	-D$(FIFOSIZE) \
 	-DTRACE \
+	-D$(VARIANT) \
 	-I../tracewhisperer/hdl/ \
 	-P cwhusky_tb.pADC_LOW_RES=$(ADC_LOW_RES) \
 	-P cwhusky_tb.pSLOW_ADC=$(SLOW_ADC) \
@@ -181,6 +185,7 @@ lint:
 	-D__ICARUS__ \
 	-DNOFIFO \
 	-DTRACE \
+	-D$(VARIANT) \
 	--top-module cwhusky_top \
 	2>&1 | tee lint.out \
 
@@ -193,6 +198,7 @@ lint_sad:
 	-D__ICARUS__ \
 	-DNOFIFO \
 	-DTRACE \
+	-D$(VARIANT) \
 	../hdl/sad.v \
 	../fpga-common/hdl/cdc_pulse.v \
 	../fpga-common/hdl/cdc_simple.v \
@@ -208,6 +214,7 @@ fifo:
         -y/mnt/c/Xilinx/Vivado/2019.2/ids_lite/ISE/verilog/src/unisims/ \
 	-I../hdl \
 	-DTRACE \
+	-D$(VARIANT) \
 	-g2005-sv \
 	-Wportbind \
 	-Wselect-range \
