cocotb: add ability to stream-read ADC samples
(doesn't yet support concurrent captures; regular Husky only)

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -359,6 +359,7 @@ run_coco:
 	GLITCH_CAPTURE=$(GLITCH_CAPTURE) \
 	MIN_SIZE=$(MIN_SIZE) \
 	MAX_SIZE=$(MAX_SIZE) \
+	STREAM=$(STREAM) \
 	NO_DOWNSTREAM_TRIGGERS=$(NO_DOWNSTREAM_TRIGGERS) \
 	MODULE=test_husky \
 	COCOTB_LOG_LEVEL=$(COCOTB_LOG_LEVEL) \
