--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -47,6 +47,7 @@ LA_CAPTURE=1
 TRACE_CAPTURE=1
 ADC_CAPTURE=1
 GLITCH_CAPTURE=0
+GLITCH_EXT_CONTINUOUS=0
 MIN_SIZE=30
 MAX_SIZE=100
 NO_DOWNSTREAM_TRIGGERS=0
@@ -357,6 +358,7 @@ run_coco:
 	TRACE_CAPTURE=$(TRACE_CAPTURE) \
 	ADC_CAPTURE=$(ADC_CAPTURE) \
 	GLITCH_CAPTURE=$(GLITCH_CAPTURE) \
+	GLITCH_EXT_CONTINUOUS=$(GLITCH_EXT_CONTINUOUS) \
 	MIN_SIZE=$(MIN_SIZE) \
 	MAX_SIZE=$(MAX_SIZE) \
 	STREAM=$(STREAM) \
