More SAD experiments: sad_x4_slowclock.v
Use divided by 4 clocks and do 4 SADs per cycle.
Doesn't seem to help for either regular or Pro configurations.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -97,6 +97,7 @@ compile_sad:
 	iverilog \
 	../hdl/sad.v \
 	../hdl/sad_x2_slowclock.v \
+	../hdl/sad_x4_slowclock.v \
 	../hdl/sad_wrapper.v \
 	../hdl/usb_reg_main.v \
 	../fpga-common/hdl/cdc_pulse.v \
