Yet another SAD module, WIP.
Promises to be significantly smaller, but some timing issues still need
to get resolved.

--- a/fpga/sim/makefile
+++ b/fpga/sim/makefile
@@ -95,6 +95,7 @@ endif
 compile_sad:
 	iverilog \
 	../hdl/sad.v \
+	../hdl/sad_x2.v \
 	../hdl/sad_x2_slowclock.v \
 	../hdl/sad_x4_slowclock.v \
 	../hdl/sad_wrapper.v \
